@@ -2,6 +2,16 @@
 
 	Resynced with GNU Classpath.
 	
+	2005-02-02  Mark Wielaard  <mark@klomp.org>
+
+	* gnu/java/net/protocol/jar/Connection.java (is_trying): Removed
+	field.
+	(get): Don't use or set is_trying.
+
+2005-02-03  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+	
 	2005-02-02  Robert Schuster  <thebohemian@gmx.net>
 
         * gnu/java/beans/decoder/GrowableArrayContext.java: Fixed
